--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`
-
-Walton Lee<br>
-Jimmy Tran
+# List of contributors
+* Walton Lee<br>
+* Jimmy Tran
