--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # List of contributors
-* Walton Lee<br>
-* Jimmy Tran
+* Walton Lee<walton.lee@holbertonschool.com>
+* Jimmy Tran<jimmy.tran@holbertonschool.com>
